<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="6"
        android:fontFamily="serif"
        android:text="@string/type_of_match"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="40sp"

        android:textStyle="bold" />

    <Button
        android:id="@+id/singles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/single"
        android:layout_weight="4"
        style="@style/buttontype"

        />
    <Button
        android:id="@+id/doubles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/doubles"
        android:layout_weight="4"
        style="@style/buttontype"/>


</LinearLayout>