<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".score_card"
    android:orientation="vertical"
    android:background="@color/blue"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scre_text"
        style="@style/TextviewStyle"
        android:background="@color/blue"

        >


    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/player_name_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/teama" />

                <TextView
                    style="@style/player_name_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/teamb" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/score_a"
                    style="@style/score_display"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/score_a" />

                <TextView
                    android:id="@+id/score_b"
                    style="@style/score_display"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/score_b" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/firstplayer"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="k"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/green"
                    android:layout_marginLeft="10dp">

                </TextView>
                <TextView
                    android:id="@+id/secondplayer"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="k"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:background="@color/green"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    >

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="200dp"

                    style="@style/scoreButton"
                    android:onClick="increase_score_a">

                </Button>
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="200dp"

                    style="@style/scoreButton"
                    android:onClick="increase_score_b">

                </Button>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="MATCH DETAILS"
                    style="@style/TextviewStyle"/>


            </LinearLayout>


        </LinearLayout>




    </ScrollView>
</LinearLayout>